[tool.poetry]
name = "pokkins"
version = "0.1.0"
description = "zero-config podcast hosting"
authors = ["Jordan Matelsky <j6k4m8@gmail.com>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
